update usecase page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>IT Portfolio | Marilena Agostino</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="asset/css/style.css">
+  <link rel="stylesheet" href="asset/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <body>
 
 <header class="navbar">
@@ -15,7 +16,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="use_case.html">Use Cases</a></li>
         <li><a href="template.html">Templates</a></li>
-        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -23,10 +23,10 @@
 
 <section class="hero">
   <div class="container hero-content">
-    <h2>Bridging Business & Technology</h2>
+    <h2>Bridging Business,Technology & People</h2>
     <p>
-      IT Business Analyst specialized in Software Projects development, Finance transformation,
-      Process Optimization and Digital Integration.
+      Hi! I'm Marilena, an IT Business Analyst with experience in in Finance and Automotive. 
+      I help teams transform complex requirements into functional solutions, aligning business goals, technology, and people
     </p>
     <a href="use_case.html" class="btn-primary">Explore Use Cases</a>
   </div>
@@ -39,19 +39,35 @@
 
         <div class="card">
           <h4>Business Analysis</h4>
-          <p>Requirement gathering, stakeholder management and gap analysis.</p>
+          <p>Requirements gathering, process modeling (BPMN & UML), stakeholder management, and use case optimization</p>
         </div>
 
-        <div class="card">
-          <h4>Finance Automation</h4>
-          <p>Process optimization and financial workflow digitalization.</p>
-        </div>
+      <div class="card">
+        <h4>Project & Product Management</h4>
+        <p>Planning, monitoring milestones, cross-functional team coordination, and delivery oversight in Agile/SAFe contexts.</p>
+      </div>
+
+      <div class="card">
+        <h4>Process & Digital Optimization</h4>
+        <p>Workflow automation, business process reengineering, and financial systems transformation.</p>
+      </div>
+
+      <div class="card">
+        <h4>Communication & Leadership</h4>
+        <p>Effective cross-team collaboration, negotiation, conflict resolution, and decision-making strategy.</p>
+      </div>
+      
       </div>
     </div>
   </section>
 
   <footer>
     <p>© 2026 Marilena Agostino | IT Portfolio</p>
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/marilena-agostino" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/techmeethuman/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/marilena13" target="_blank"><i class="fab fa-github"></i></a>
+    </div>  
   </footer>
 <script>
   window.addEventListener("scroll", function() {
