--- a/use_case.html
+++ b/use_case.html
@@ -36,6 +36,270 @@
     <section class="usecases">
       <div class="container">
 
+        <!-- Use Case 1 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Open Insurance Process Reengineering</h3>
+    <div class="tags">
+      <span>BPMN</span>
+      <span>UML</span>
+      <span>Process Optimization</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Inefficient legacy processes in insurance management causing delays and inconsistencies in policy handling.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Analysis of as-is processes, stakeholder interviews, and feasibility assessment for process automation and digital integration.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Redesign of core processes with BPMN and UML modeling, creation of optimized workflows, and alignment with strategic business goals.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>-20% process completion time</li>
+        <li>Improved customer satisfaction</li>
+        <li>Aligned processes with corporate strategy</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Use Case 2 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Digital Payments and Card Management</h3>
+    <div class="tags">
+      <span>Agile</span>
+      <span>SharePoint</span>
+      <span>Project Coordination</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Manual tracking of digital payments and virtual card transactions causing operational inefficiencies and delays.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Collection and prioritization of requirements, analysis of functional gaps, and coordination of cross-functional teams using SharePoint and Agile methods.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Implementation of automated monitoring workflows, standardization of reporting, and functional validation of payment systems and digital card platforms.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Enhanced operational efficiency</li>
+        <li>Reduced errors in transaction processing</li>
+        <li>Clearer cross-team communication and accountability</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Use Case 3 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Automotive B2B Tracking System</h3>
+    <div class="tags">
+      <span>Agile</span>
+      <span>Figma</span>
+      <span>Mobile App</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Lack of visibility on vehicle and goods tracking for B2B clients, causing inefficiencies in logistics and customer support.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Elicitation of functional requirements, prototyping in Figma, and iterative validation with stakeholders and mobile development teams.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Development of a mobile tracking application with navigable prototypes, improved UX/UI, and integration with existing B2B systems for real-time monitoring.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Real-time visibility on shipments</li>
+        <li>Improved client experience</li>
+        <li>Reduction in manual tracking errors</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<!-- Use Case 4 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Mortgage & Loan Process Assessment</h3>
+    <div class="tags">
+      <span>UML</span>
+      <span>Waterfall</span>
+      <span>Process Reengineering</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Manual workflows for mortgage and loan approvals causing delays and inefficiencies in credit operations.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Interviews with stakeholders, as-is process documentation, gap analysis, and identification of automation opportunities.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Redesign of credit and mortgage processes, creation of solution proposals for legacy tool replacement, and detailed process modeling in UML.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Streamlined loan approval workflows</li>
+        <li>Reduced manual errors</li>
+        <li>Foundation for digitalization of mortgage processes</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Use Case 5 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>B2B Financial Platform Maintenance</h3>
+    <div class="tags">
+      <span>Azure Board</span>
+      <span>Agile</span>
+      <span>Project Coordination</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Complex B2B financial platform requiring constant updates, with risks of delayed releases and unaligned teams.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Prioritization of requirements, planning and tracking tasks in Azure Board, coordination of cross-functional development teams.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Implementation of structured workflows for maintenance and release management, ensuring timely delivery and functional alignment.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Improved release predictability</li>
+        <li>Better team alignment and visibility</li>
+        <li>Reduced backlog and rework</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Use Case 6 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Mobile B2C Application Development</h3>
+    <div class="tags">
+      <span>Angular</span>
+      <span>Ionic</span>
+      <span>UI/UX Design</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Need for responsive and user-friendly mobile applications to manage client accounts and services.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Development with Angular/Ionic, creation of custom UI libraries, iterative prototyping, and cross-country knowledge transfer.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Delivery of hybrid mobile applications compatible with iOS, Android, and web, using Storybook for component testing and InVision for prototyping.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Improved user experience and engagement</li>
+        <li>Cross-platform accessibility</li>
+        <li>Faster onboarding of new features</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Use Case 7 -->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Vehicle & Goods Tracking System</h3>
+    <div class="tags">
+      <span>Figma</span>
+      <span>Agile</span>
+      <span>Prototyping</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Problem</h4>
+        <p>Lack of visibility and monitoring tools for B2B clients tracking vehicles and shipments.</p>
+      </div>
+      <div class="block">
+        <h4>Approach</h4>
+        <p>Elicitation of requirements, interactive prototyping in Figma, stakeholder validation, and iterative feedback cycles with mobile and backend teams.</p>
+      </div>
+      <div class="block">
+        <h4>Solution</h4>
+        <p>Deployment of a mobile tracking system with improved UX/UI, real-time monitoring, and integration with existing logistics infrastructure.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Real-time shipment tracking</li>
+        <li>Reduced delays and errors</li>
+        <li>Enhanced B2B client satisfaction</li>
+      </ul>
+    </div>
+  </div>
+</div>
         <div class="usecase-card">
           <div class="usecase-header">
             <h3>Finance Process Automation</h3>
