update social icons

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
   <footer>
     <p>© 2026 Marilena Agostino | IT Portfolio</p>
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/marilena-agostino" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/techmeethuman/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://github.com/marilena13" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/marilena-a-b04b76194/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/techmeetshuman/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/Marilena13" target="_blank"><i class="fab fa-github"></i></a>
     </div>  
   </footer>
 <script>
