--- a/use_case.html
+++ b/use_case.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="asset/css/style.css">
   <link rel="stylesheet" href="asset/css/usecase.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -344,6 +345,11 @@
   <!-- Footer -->
   <footer>
     <p>© 2026 Marilena Agostino | IT Portfolio</p>
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/marilena-a-b04b76194/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.instagram.com/techmeetshuman/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/Marilena13" target="_blank"><i class="fab fa-github"></i></a>
+    </div>  
   </footer>
 
   <!-- Navbar Scroll Script -->
